--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,4 @@
 {
-    "authToken": "123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11",
-    "owner": 34509246
+    "authToken": "1966359309:AAHa91bfyvP3lNKQCmSUgZ0KDozmzFT_i0M",
+    "owner": 511619977
 }
